crates/hir-ty/tests/snapshots/jls_shadowed_type_params__distinct_method_param_reads_class_field.snap
---
source: crates/hir-ty/tests/jls_shadowed_type_params.rs
expression: out
---
FILE /src/com/example/Shadow.java:
package com.example;

class Shadow<T extends Number> {
    T f;

    Shadow(T f) {
        this.f = f;
    }

    <U> void m() {
        U local = (U) (Object) this.f;
    }
}

method Shadow(T): <init>
  locals: l0: T
  exprs: e0: com.example.Shadow<T> | e1: T | e2: T | e3: T
method m(): void
  locals: l1: U
  exprs: e4: com.example.Shadow<T> | e5: T | e6: java.lang.Object | e7: U
